syntax = "proto3";

package contactical.reality.v1;

import "amino/amino.proto";
import "contactical/reality/v1/params.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "contactical/x/reality/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  // CreateClaim defines the CreateClaim RPC.
  rpc CreateClaim(MsgCreateClaim) returns (MsgCreateClaimResponse);

  // RegisterNode defines the RegisterNode RPC.
  rpc RegisterNode(MsgRegisterNode) returns (MsgRegisterNodeResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "contactical/x/reality/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.

  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

// MsgCreateClaim defines the MsgCreateClaim message.
message MsgCreateClaim {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string sensor_hash = 2;
  string gnss_hash = 3;
  string anchor_signature = 4;
  bytes  data_signature = 5;     // TEE signature over (sensor_hash || gnss_hash)
  int64  timestamp = 6;          // Unix timestamp when data was signed
}

// MsgCreateClaimResponse defines the MsgCreateClaimResponse message.
message MsgCreateClaimResponse {}

// MsgRegisterNode defines the MsgRegisterNode message.
message MsgRegisterNode {
  option (cosmos.msg.v1.signer) = "creator";
  option (amino.name) = "contactical/x/reality/MsgRegisterNode";

  string creator = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  bytes  attestation_cert = 2;
  bytes  pub_key = 3;
}

// MsgRegisterNodeResponse defines the MsgRegisterNodeResponse message.
message MsgRegisterNodeResponse {
  bool success = 1;
}
