package main

import (
	"context"
	"fmt"
	"log"
	"net"

	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"

	// protocë¡œ ìƒì„±ëœ íŒ¨í‚¤ì§€ (ê²½ë¡œëŠ” ë³¸ì¸ì˜ í”„ë¡œì íŠ¸ ì„¤ì •ì— ë§ê²Œ ìˆ˜ì •)
	pb "contactical/proto/contactical/contactical/api/v1" 
)

type server struct {
	pb.UnimplementedContacticalServiceServer
}

// 1. ë…¸ë“œ ë“±ë¡ (Key Attestation ê²€ì¦)
func (s *server) RegisterNode(ctx context.Context, req *pb.RegisterNodeRequest) (*pb.RegisterNodeResponse, error) {
	fmt.Printf("ğŸ“© RegisterNode ìš”ì²­ ìˆ˜ì‹ : %s\n", req.CreatorAddress)

	// [ê¸°ì¡´ Go ê²€ì¦ ë¡œì§ í˜¸ì¶œ]
	// VerifyAttestationChain(req.CertChain, req.Challenge) ì‹¤í–‰
	// ì—¬ê¸°ì„œëŠ” ì˜ˆì‹œë¡œ ì„±ê³µ ì²˜ë¦¬
	success := true 

	if !success {
		return nil, status.Errorf(codes.Unauthenticated, "ê¸°ê¸° ê²€ì¦ ì‹¤íŒ¨")
	}

	return &pb.RegisterNodeResponse{
		Success: true,
		Message: "ë…¸ë“œ ë“±ë¡ ì„±ê³µ",
		NodeId:  "node_" + req.CreatorAddress[:8],
	}, nil
}

// 2. ë°ì´í„° ì œì¶œ (TEE ì„œëª… ê²€ì¦)
func (s *server) SubmitData(ctx context.Context, req *pb.SubmitDataRequest) (*pb.SubmitDataResponse, error) {
	fmt.Printf("ğŸ“© SubmitData ìš”ì²­ ìˆ˜ì‹ ! NodeID: %s, Payload: %s\n", req.NodeId, req.Payload)

	// [ê¸°ì¡´ Go ì„œëª… ê²€ì¦ ë¡œì§ í˜¸ì¶œ]
	// isValid, _ := VerifyDataSignature(req.Payload, req.Signature, req.Cert)
	isValid := true 

	if !isValid {
		return &pb.SubmitDataResponse{Success: false}, nil
	}

	return &pb.SubmitDataResponse{
		Success: true,
		TxHash:  "0xabc123...", // ì‹¤ì œë¡œëŠ” ë¸”ë¡ì²´ì¸ íŠ¸ëœì­ì…˜ í•´ì‹œê°€ ë“¤ì–´ê°
	}, nil
}

func main() {
	// gRPC ê¸°ë³¸ í¬íŠ¸ëŠ” ë³´í†µ 9090ì„ ë§ì´ ì”ë‹ˆë‹¤. (8080ê³¼ ê²¹ì¹˜ì§€ ì•Šê²Œ)
	lis, err := net.Listen("tcp", "0.0.0.0:9090")
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}

	s := grpc.NewServer()
	pb.RegisterContacticalServiceServer(s, &server{})

	fmt.Println("ğŸš€ Contactical gRPC ì„œë²„ ì‹œì‘ (Port 9090)...")
	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}